<resources>
    <string name="app_name">Esm Mobile</string>
    <string name="welcome">Welcome,</string>
    <string name="matriculation_no">Matriculation No.</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="courses">Courses</string>
    <string name="events">Events</string>
    <string name="profile">Profile</string>
    <string name="latest_news">Latest News</string>
    <string name="title_activity_guest_page">GuestPage</string>
    <string name="title_activity_guest_pages">GuestPages</string>
    <string name="esm_name">Ecole Superieure De Management, Benin \nESM</string>
    <string name="home_menu">HOME</string>
    <string name="our_courses">OUR COURSES</string>
    <string name="login_menu">LOGIN</string>
    <string name="duration_and_fees">DURATION AND FEES</string>
    <string name="apply_now">APPLY NOW</string>
    <string name="admissions_open_n_july_2023">Admissions open \n july 2023</string>
    <string name="study_at_esm_university">Study at ESM University</string>
    <string name="studyAtDescription">Get a new experience of your subject at ESM University as you learn and connect with people from all over the world.</string>
    <string name="undergraduate_courses">Undergraduate Courses</string>
    <string name="explore_button">Explore our sports/social wall</string>
    <string name="explore_header">Life at ESM University</string>
    <string name="explore_message">Be your best self in a network of students, engaging in sporting and social activities</string>
    <string name="contact_us">Contact us</string>
    <string name="application_requirements">Application \nRequirements</string>
    <string name="application_description"><![CDATA[● 5 O\'level Credit Passes Including [English | Mathematics & Three Relevant Subject In Not More Than Two Sitting]. \n● Candidate With WAEC | NECO | OND or A\'level Qualification Shall Be Considered For 200 Level. \n● International Passport. \n● Birth Certificate. \n● State Of Origin. \n● Five(5) Passport Photographs.]]></string>
    <string name="note_description">***Note** \n If you meet the stated requirements and have not filled the registration form, fill the form below.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="_20_02_2022">20/02/2022</string>
    <string name="fill_the_form">Fill The Form</string>
    <string name="about">ABOUT</string>
    <string name="share">SHARE</string>
    <string name="small_about">About</string>
    <string name="announcement">Announcement</string>
    <string name="my_courses">My Courses</string>
    <string name="programming_language">Programming Language</string>
    <string name="cme_121">CME 121</string>
    <string name="assignments">Assignments</string>
    <string name="notifications">Notifications</string>
    <string name="developer_name">Etila Leonard Anibe</string>
    <string name="student_no">Matric No:</string>
    <string name="esm_2019_176_cme">Esm/2019/176/Cme</string>
    <string name="course">Course:</string>
    <string name="bachelor_of_engineering_in_n_computer_engineering">Bachelor of Engineering in\n Computer Engineering</string>
    <string name="year">Year:</string>
    <string name="_400_level">400 Level</string>
    <string name="birth_date">Birth Date:</string>
    <string name="_20_02_2000">20–02–2000</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="nationality">Nationality:</string>
    <string name="nigeria">Nigeria</string>
    <string name="email_">Email:</string>
    <string name="etilaleonard25_gmail_com">etilaleonard25@gmail.com</string>
    <string name="contact">Contact:</string>
    <string name="_2348182697731">+2348182697731</string>
    <string name="address">Police Housing Estate, Mife\n Oyigbo, Rivers State,\n Nigeria</string>
    <string name="_def">Address:</string>
    <string name="march_2023">March 2023</string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="sun">S</string>
    <string name="mon">M</string>
    <string name="tue">T</string>
    <string name="wed">W</string>
    <string name="thur">T</string>
    <string name="fri">F</string>
    <string name="sat">S</string>
    <string name="number">1</string>
    <string name="_1">1</string>
    <string name="item_undergrad_course">BEng. Computer Engineering</string>
    <string name="event_marker">Event Marker</string>
    <string name="id_el_fitr">id el Fitr</string>
    <string name="no_assignments">No assignments</string>
    <string name="see_more">See More</string>
    <string name="good_morning_leonard">Welcome Back, Leonard</string>
    <string name="contact_head_of_department">Contact Head Of Department</string>
    <string name="view_result">View Result</string>
    <string name="main_home_background">Main Home Background</string>
    <string name="no_notification">No Notification</string>
</resources>