<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/applyMaterialColor"
    app:cardCornerRadius="15dp"
    app:cardElevation="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="22dp">

        <TextView
            android:id="@+id/fullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/developer_name"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/matriculationNumberDef"
            style="@style/textProfileLight"
            android:layout_marginTop="24dp"
            android:text="@string/student_no"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fullName" />

        <TextView
            android:id="@+id/matriculationNumber"
            style="@style/textProfileBold"
            android:text="@string/esm_2019_176_cme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/matriculationNumberDef" />

        <TextView
            android:id="@+id/courseDef"
            style="@style/textProfileLight"
            android:layout_marginTop="12dp"
            android:text="@string/course"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/matriculationNumberDef" />

        <TextView
            android:id="@+id/course"
            style="@style/textProfileBold"
            android:gravity="end"
            android:text="@string/bachelor_of_engineering_in_n_computer_engineering"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/courseDef" />

        <TextView
            android:id="@+id/yearDef"
            style="@style/textProfileLight"
            android:layout_marginTop="24dp"
            android:text="@string/year"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/courseDef" />

        <TextView
            android:id="@+id/year"
            style="@style/textProfileBold"
            android:text="@string/_400_level"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/yearDef" />
        
        <View
            android:id="@+id/divide1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#F3F3F3"
            android:layout_marginTop="27dp"
            app:layout_constraintTop_toBottomOf="@id/year"/>


        <TextView
            android:id="@+id/birthDateDef"
            style="@style/textProfileLight"
            android:layout_marginTop="27dp"
            android:text="@string/birth_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divide1" />

        <TextView
            android:id="@+id/birthDate"
            style="@style/textProfileBold"
            android:text="@string/_20_02_2000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/birthDateDef" />

        <TextView
            android:id="@+id/genderDef"
            style="@style/textProfileLight"
            android:layout_marginTop="12dp"
            android:text="@string/gender"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/birthDateDef" />

        <TextView
            android:id="@+id/gender"
            style="@style/textProfileBold"
            android:text="@string/male"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/genderDef" />

        <TextView
            android:id="@+id/nationalityDef"
            style="@style/textProfileLight"
            android:layout_marginTop="12dp"
            android:text="@string/nationality"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/genderDef" />

        <TextView
            android:id="@+id/nationality"
            style="@style/textProfileBold"
            android:text="@string/nigeria"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/nationalityDef" />

        <View
            android:id="@+id/divide2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#F3F3F3"
            android:layout_marginTop="27dp"
            app:layout_constraintTop_toBottomOf="@id/nationalityDef"/>

        <TextView
            android:id="@+id/emailAddressDef"
            style="@style/textProfileLight"
            android:layout_marginTop="27dp"
            android:text="@string/email_"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divide2" />

        <TextView
            android:id="@+id/emailAddress"
            style="@style/textProfileBold"
            android:text="@string/etilaleonard25_gmail_com"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/emailAddressDef" />

        <TextView
            android:id="@+id/contactDef"
            style="@style/textProfileLight"
            android:layout_marginTop="12dp"
            android:text="@string/contact"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailAddressDef" />

        <TextView
            android:id="@+id/contact"
            style="@style/textProfileBold"
            android:text="@string/_2348182697731"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/contactDef" />

        <TextView
            android:id="@+id/addressDef"
            style="@style/textProfileLight"
            android:layout_marginTop="12dp"
            android:text="@string/_def"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contactDef" />

        <TextView
            android:id="@+id/address"
            style="@style/textProfileBold"
            android:text="@string/address"
            android:gravity="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/addressDef" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>